Fix bug poster overlap with below title

--- a/src/main/resources/public/beauty.css
+++ b/src/main/resources/public/beauty.css
@@ -25,3 +25,7 @@
     color: white;
     font-size: 30px;
 }
+
+.row {
+    margin-top: 3em !important;
+}
